# placement-mail-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  USER_MANUAL.md  cleanup_commands.sh  credentials.json  main.py  patch.py  patch_filters.py  patch_filters2.py  patch_filters3.py  patch_filters4.py  patch_gmail.py  patch_init.py  patch_lock.py  patch_manager.py  patch_runner.py  patch_sheets.py  patch_sheets_fix.py  patch_smtp_gemini.py  pyproject.toml  regression_report.txt  requirements-dev.txt  requirements.txt  run_regression_tests.py  test_generator.py
.github/workflows/: ci.yml
data/: fetch_state.json  heartbeat.json  system_health.json  trusted_senders.json
docs/design/: 01-findings.md  02-issues.md  03-adr-calendar-sync.md  04-integration-spec.md  05-improvement-backlog.md  06-extraction-reliability.md  07-calendar-sync-implementation.md  08-confirmation-audit.md  09-manager-review.md  10-confirmation-and-reminders.md
scratch/: analyze_emails.py  runner_refactor.py  test_regex.py
scripts/: backfill_confirmations.py  clean_start.py  init_db.py  reset_and_rebuild.py  reset_project.py  run_audit.py  run_tracker.bat  test_email_notification.py  test_gmail_auth.py  test_sheets_auth.py
scripts/eval/: README.md  build_labels.py  fetch_corpus.py  run_eval.py
sheets/: test_sheet_append.py
tests/: conftest.py  test_alert_rearm.py  test_calendar_client.py  test_calendar_derive.py  test_calendar_flags_store.py  test_calendar_sync.py  test_confirmation_backfill.py  test_confirmation_corpus.py  test_confirmation_detection.py  test_confirmation_integration.py  test_database.py  test_database_manager.py  test_dataset_e2e.py  test_deduplication.py  test_e2e_pipeline.py  test_eligibility.py  test_end_to_end.py  test_eval_extraction_reliability.py  test_evolution_improvements.py  test_extraction_validation.py  test_filters.py  test_followup_detection.py  test_gemini_extraction.py  test_gemini_extractor.py  test_gmail_filters.py  test_gmail_parsing.py  test_heartbeat.py  test_imports.py  test_input_completeness.py  test_lock_manager.py  test_logging_config.py  test_main_finalize_run.py  test_manager_review_fixes.py  test_model_fallback.py  test_morning_of_event_digest.py  test_my_status_writeback.py  test_notifications.py  test_oauth_refresh_wrapping.py  test_offline_recovery.py  test_production_hardening.py  (+10 more)
(+58 files in other folders)
