[project]
name = "placement-mail-tracker"
version = "1.0.0"
description = "Personal automation for tracking placement and internship emails."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
# Match the minimum supported runtime (requires-python = ">=3.10"). The code
# is regularly run on CPython 3.10, where datetime.UTC / enum.StrEnum do not
# exist, so do NOT raise py311+ upgrade lints here.
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
