[project]
name = "placement-mail-tracker"
version = "1.0.0"
description = "Personal automation for tracking placement and internship emails."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
# Match the minimum supported runtime (requires-python = ">=3.10"). The code
# is regularly run on CPython 3.10, where datetime.UTC / enum.StrEnum do not
# exist, so do NOT raise py311+ upgrade lints here.
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not eval'"
markers = [
    "eval: opt-in extraction-reliability eval suite (scripts/eval) — scores the already-generated scripts/eval/out/score_report.json against known-good floors; skipped by default (python -m pytest -m eval to run). Regenerate score_report.json first with scripts/eval/run_eval.py --extract/--score.",
]
